developers-reference (3.4.1) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 13 Jun 2008 15:45:20 +0200

developers-reference (3.4.0) unstable; urgency=low

  [ Lucas Nussbaum ]
  * Update Vcs-* fields after DDP's SVN restructuring. Closes: #483428.
  * Fix conditions for updates from unstable to testing. Closes: #470754.
  * linda has been removed. Remove section A.2.2. Closes: #483242.
  * Co-maintainers are listed in the Uploaders field. Closes: #483230.
  * Collaborative Maintenance: the 'global part' of debian/control
    is the first paragraph, about the source package. Closes: #483231.
  * debian-private archives are on master. Closes: #475531.
  * Mention Debian Maintainers and the debian-maintainers package.
    Closes: #483225.
  * README.contrib: document that short lines are preferred.
    Closes: #278267.
  * build-rdeps allows to list reverse build-dependencies.
    Closes: #376582.

  [ Marc 'HE' Brockschmidt ]
  * Replace abused <emphasis> tags with <literal> tags.
  * In the same spirit, wrap all uses of stable/testing/unstable and
    release codenames in <literal>
  * Remove reference to upload queue on auric in section 5.6.5, auric
    doesn't exist anymore.
  * Fix several typesetting errors and typos noticed by Sandro Tosi,
    thanks for the notes! Closes: #483223
  * Update several bits about release management/testing transitions
    and release-critical bugs. Closes: #483237, #456494
  * Update and rewrite the porting guidelines in chapter 5, bringing
    the dev-ref up to the state of porting in the year 2008. Also
    fixes several wording issues, such as possible misunderstandings
    about the need to rebuild uploads. Closes: #483226
  * Update the instructions for uploads to the (old)stable 
    distributions. Emphasize the importance of contacting the SRM
    team before upload. Closes: #459343
  * Update instructions for package removal requests. Closes: #454216