@@ -48,6 +48,19 @@ validate:			$(SOURCES)
 %/validate:			$(addprefix %/,$(SOURCES))
 	cd $(@D) && $(XL) index.dbk
 
+# This rule controls the build and installation on the website
+# Logs are here: http://www-master.debian.org/build-logs/ddp/
+.PHONY: publish
+publish:	all
+	[ -d $(PUBLISHDIR) ] || exit 1
+	install -d -m 755 $(PUBLISHDIR)/developers-reference
+	rm -f $(PUBLISHDIR)/developers-reference/*.html
+	rm -f en && ln -sf . en
+	$(foreach format,$(FORMATS),$(foreach lang,en $(LANGS),for file in $(lang)/*.$(format); do if [ -e "$$file" ]; then cp $$file $(PUBLISHDIR)/developers-reference/$$(basename $$file .$(format)).$(lang).$(format); fi; done;))
+	ln -sf index.en.html $(PUBLISHDIR)/developers-reference/index.html
+	ln -sf developers-reference.en.pdf $(PUBLISHDIR)/developers-reference/developers-reference.pdf
+	ln -sf developers-reference.en.txt $(PUBLISHDIR)/developers-reference/developers-reference.txt
+
 .PHONY: developers-reference.html %/developers-reference.html
 developers-reference.html:	$(CURDIR)/index.html
 %/developers-reference.html:	$(addprefix %/,index.html)
