@@ -1,6 +1,8 @@
 developers-reference (3.4.1) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  [ Raphael Hertzog ]
+  * Create a publish target in the Makefile to reenable builds on the
+    website.
 
  -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 13 Jun 2008 15:45:20 +0200
 
